# ktsn

./: .gitignore  Makefile  README.md  dune-project  frama-c-ktsn.opam  frama-c-ktsn.opam.template
bench/: seal.xml  setup.py
bench/ktsn/: ktsn.py
bench/seal/: seal.py
src/: abstraction.ml  analysis.ml  common.ml  config.ml  dune  formula.ml  func_call.ml  interpretation.ml  ivette.ml  main.ml  printing.ml  simplification.ml  transfer.ml  witness.ml
src/backend/: astral_convertor_sig.ml  astral_query.ml  astral_v1.ml  astral_v2.ml  astral_v2.mli
src/preprocessing/: condition_split.ml  constants.ml  preprocessing.ml  stmt_split.ml  types.ml
svcomp/: README  ktsn-entrypoint.py  seal-entrypoint.py  smoketest.sh
test_programs/: dls_full.c  ls_cyclic.c  ls_full.c  ls_full_return.c  ls_full_single_function.c  ls_merge_lists.c  nls_full.c  nls_memory_leak.c
utils/: pack.sh
